opam-version: "1.2"
maintainer: "aluuu@husa.su"
authors: [
  "Mike Wells"
  "David Höppner"
  "Alexander Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD3"
tags: []
dev-repo: "https://github.com/0xffea/ocaml-redis.git"
build: [
  ["jbuilder" "build" "--only-packages" "redis-lwt" "--root" "."
   "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build}
  "redis"
  "base-unix"
  "lwt"
]