opam-version: "2.0"
maintainer: "aluuu@husa.su"
authors: [
  "Mike Wells"
  "David Höppner"
  "Aleksandr Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD3"
tags: ["redis" "lwt"]
dev-repo: "git+https://github.com/0xffea/ocaml-redis.git"
synopsis: "Redis client (lwt interface)"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build & >= "1.0"}
  "redis"
  "lwt"
  "ocaml" { >= "4.02.3" }
  "ounit" {with-test}
  "containers" {with-test}
]
