opam-version: "2.0"
maintainer: "Simon Cruanes"
version: "0.7"
authors: [
  "Mike Wells"
  "David Höppner"
  "Aleksandr Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD-3-Clause"
tags: ["redis" "lwt"]
dev-repo: "git+https://github.com/0xffea/ocaml-redis.git"
synopsis: "Redis client (lwt interface)"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  # ["dune" "runtest" "-p" name "-j" jobs] {with-test}  # need network
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {>= "1.0"}
  "redis" { = version }
  "lwt" {>= "2.4.7"}
  "ocaml" { >= "4.03.0" }
  "ounit2" {with-test}
  "containers" {with-test & >= "3.0"}
  "odoc" {with-doc}
]
