opam-version: "1.2"
maintainer: "aluuu@husa.su"
authors: [
  "Mike Wells"
  "David Höppner"
  "Aleksandr Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD3"
tags: []
dev-repo: "https://github.com/0xffea/ocaml-redis.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.0"}
  "redis"
]
available: [ocaml-version >= "4.02.3"]
