opam-version: "2.0"
version: "0.7"
maintainer: "Simon Cruanes"
authors: [
  "Mike Wells"
  "David Höppner"
  "Aleksandr Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD-3-Clause"
tags: ["redis" "unix"]
synopsis: "Redis client (blocking)"
dev-repo: "git+https://github.com/0xffea/ocaml-redis.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  # ["dune" "runtest" "-p" name "-j" jobs] {with-test} # need network
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune" {>= "1.0"}
  "redis" { = version }
  "ocaml" { >= "4.03.0" }
  "camlp-streams"
  "ounit2" {with-test}
  "containers" {with-test & >= "3.0"}
  "odoc" {with-doc}
]
