opam-version: "2.0"
maintainer: "aluuu@husa.su"
authors: [
  "Mike Wells"
  "David Höppner"
  "Aleksandr Dinu"
]
homepage: "https://github.com/0xffea/ocaml-redis"
bug-reports: "https://github.com/0xffea/ocaml-redis/issues"
license: "BSD3"
tags: ["redis"]
dev-repo: "git+https://github.com/0xffea/ocaml-redis.git"
synopsis: "Redis client"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "1.0" }
  "base-unix"
  "uuidm"
  "re"
  "ocaml" { >= "4.02.3" }
  "ounit" {with-test}
  "lwt" {with-test}
  "containers" {with-test}
]
